# life-simulation

./: Cargo.toml  LICENSE_MIT  README.md  package-lock.json
Good XML Test Cases/: Base-map-(500x500).xml  Readme + notes.txt  Spawn-Grazer.xml  Spawn-One of each.xml  Spawn-Plant.xml  Spawn-Pred.xml  Spawn-Rock.xml  Test-Grazer-Eat-Plant.xml  Test-Pred-Eat-Grazer.xml  Test-Pred-Eat-Pred and Genes.xml  Test-Pred-Mate.xml  Test-Vision-Rock+plant+Grazer.xml  test.xml
src/: entity.rs  lib.rs  movement.rs  simulation.rs
www/: index.html  index.js  package-lock.json  package.json
